--- a/example/ios/Podfile
+++ b/example/ios/Podfile
@@ -23,6 +23,10 @@ target 'MapExample' do
     :app_path => "#{Pod::Config.instance.installation_root}/.."
   )
 
+
+  pod 'Google-Maps-iOS-Utils'
+  pod 'GoogleMaps'
+
   target 'MapExampleTests' do
     inherit! :complete
     # Pods for testing
