--- a/android/build.gradle
+++ b/android/build.gradle
@@ -95,5 +95,10 @@ dependencies {
   //noinspection GradleDynamicVersion
   implementation "com.facebook.react:react-native:+"
   implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+  implementation 'com.google.android.gms:play-services-maps:18.0.0'
+  implementation 'com.google.android.gms:play-services-location:21.0.1'
+  implementation 'com.google.android.libraries.places:places:3.2.0'
+  implementation 'com.android.volley:volley:1.2.1'
+
 }
 
